[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spin-sdk"
version = "3.4.1"
description = "Experimental SDK for Spin and Componentize-Py"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Spin Framework Contributors" } ]
maintainers = [ { name = "Spin Framework Contributors" } ]
keywords = [ "webassembly", "wasm", "component", "spin" ]

[project.urls]
repository = "https://github.com/spinframework/spin-python-sdk"
documentation = "https://spinframework.github.io/spin-python-sdk"

[tool.setuptools.packages.find]
where = ["src"]
