[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spin-sdk"
version = "4.0.0"
description = "Python SDK for Spin"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [ { name = "Spin Framework Contributors" } ]
maintainers = [ { name = "Spin Framework Contributors" } ]
keywords = [ "webassembly", "wasm", "component", "spin" ]

[project.urls]
repository = "https://github.com/spinframework/spin-python-sdk"
documentation = "https://spinframework.github.io/spin-python-sdk"

[tool.setuptools.packages.find]
where = ["src"]
